Fixed more footer nav on mobile guest

--- a/client/src/components/NowPlaying.scss
+++ b/client/src/components/NowPlaying.scss
@@ -4,8 +4,8 @@
     background-size: cover;
 }
 #albumbig{
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
 }
 
 #player{
